fix de la connexion à supabase

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.whjmyjpxyiucsdsjemqr.supabase.co:5432/postgres
+#DATABASE_URL=postgresql://postgres:Movies1234!Zack@db.whjmyjpxyiucsdsjemqr.supabase.co:5432/postgres?sslmode=require&prefer_host=ipv4
 
 SUPABASE_URL=https://whjmyjpxyiucsdsjemqr.supabase.co
 SUPABASE_KEY=sb_publishable_qQl1iMZQSjCOJFbzMra2ow_st65Hy8f
